# pluma-online

./: .dockerignore  .editorconfig  .env.defaults  .env.example  .eslintignore  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .npmrc  .prettierignore  .prettierrc  Cargo.toml  Dockerfile  Dockerfile-devel  LICENSE.md  README.md  Vagrantfile  angular.json  docker-compose.development.yml  docker-compose.override.yml  docker-compose.yml  docker-entry.sh  jest.config.json  jest.server-config.json  nest-cli.json  package.json  pluma-online.code-workspace  pnpm-lock.yaml  rustfmt.toml  secret.key  tsconfig.app.json  tsconfig.eslint.json  tsconfig.json  tsconfig.server.json  tsconfig.spec.json  webpack.config.ts
.github/workflows/: codeql-analysis.yml  containerize-devel.yml  containerize-development.yml  containerize-production.yml  containerize.yml  testing.yml
.husky/: pre-commit
docker/mongodb/: Dockerfile-mongo
docker/nginx/: Dockerfile
docs/: Onboarding.md  Postman.md
migrations/2020-11-02-190918_initialize_db_structure/: up.sql
migrations/2020-11-03-202254_add_initial_plugins/: down.sql
nginx/: .dockerignore  .editorconfig  .env.example  .gitmodules  Dockerfile  README.md
pluma-backend/: Cargo.toml
pluma-backend/src/: handlers.rs  main.rs  models.rs
pluma-frontend/: .gitignore  Cargo.toml  Trunk.toml  package.json
pluma-frontend-experimental/: Cargo.toml
pluma-frontend-experimental/src/: styles.scss  util.rs
pluma-frontend-experimental/src/modules/: auth.rs  mod.rs
pluma-frontend-experimental/src/modules/software/: mod.rs
pluma-frontend-experimental/src/services/: mod.rs
pluma-frontend/src/: constants.rs  error.rs  index.html  lib.rs  main.rs  routes.rs  util.rs
pluma-frontend/src/components/: mod.rs  pluma.rs
pluma-frontend/src/components/software/: pluma.rs
pluma-frontend/src/modules/: auth.rs
pluma-frontend/src/modules/software/: pluma.rs
pluma-frontend/src/services/: api.rs  auth.rs  mod.rs
pluma-online-backend/: Dockerfile-devel  package.json  pnpm-lock.yaml
pluma-online-backend/prisma/: schema.prisma
pluma-online-backend/src/: app.module.ts  main.ts
pluma-online-frontend/: .env.example  .eslintrc.json  angular.json  custom-webpack.config.ts  package-lock.json  package.json  prettier.config.js  tsconfig.json
pluma-online-frontend/src/: index.html  main.ts  polyfills.ts  styles.scss
prisma/: categories.ts  languages.ts  pipelines.ts  plugins.ts  schema.prisma  seed.ts
server/: app.controller.spec.ts  app.controller.ts  app.module.ts  env.validation.ts  generate-schema.ts  logging.plugin.ts  main.ts  roles.decorator.ts  schema.graphql  user.decorator.ts
server/auth/: action.js  action.ts  auth.controller.js  auth.controller.ts  auth.module.js  auth.module.ts  auth.resolver.spec.ts  auth.resolver.ts  auth.service.js  auth.service.spec.ts  auth.service.ts  casl-ability.factory.js  casl-ability.factory.ts  current-user.decorator.js  gql-jwt-auth.guard.ts  jwt-auth.guard.js  jwt-auth.guard.ts  jwt-gql-auth.guard.js  jwt-gql-auth.guard.ts  jwt.strategy.js  jwt.strategy.ts  local-auth.guard.js  local.strategy.js  local.strategy.ts  not-unique.exception.ts  policies.guard.js  policies.guard.ts  policy.decorator.js  policy.decorator.ts  public.decorator.js  reset-auth.guard.ts  reset.strategy.ts  roles.guard.ts  uniqueError.ts
server/casl/: casl-ability.factory.ts  casl.module.ts  policies.guard.spec.ts  policies.guard.ts
server/categories/: categories.module.js  categories.resolver.ts
server/category/: category.resolver.spec.ts  category.resolver.ts
server/plugins/: plugin.js  (+6 more)
src/: constants.rs  error.rs  handlers.rs  index.html  main.rs  main.server.ts  main.ts  manifest.webmanifest  models.rs  polyfills.ts  response.rs  result.rs  schema.rs  styles.scss
(+822 files in other folders)
