[package]
name = "pluma-online"
description = "Backend to the PluMA Online system."
version = "0.1.0"
authors = ["Joseph R. Quinn <423821+quinnjr@users.noreply.github.com>"]
edition = "2018"

[workspace]
include = ["pluma-frontend"]

[dependencies]
actix-rt = "1.1.1"
actix-service = "1.0.6"
actix-web = "3.0.0"
anyhow = "1.0.33"
chrono = { version = "0.4.19", features = [ "serde" ] }
diesel = { version = "1.4.5", features = [ "postgres", "uuidv07", "r2d2", "chrono" ] }
dotenv = "0.15.0"
futures = "0.3.5"
r2d2 = "0.8.9"
serde = "1.0.116"
serde_json = "1.0.57"
