[package]
name = "pluma-online"
description = "Backend to the PluMA Online system."
version = "0.1.0"
authors = ["Joseph R. Quinn <423821+quinnjr@users.noreply.github.com>"]
edition = "2018"

[workspace]
members = ["pluma-frontend"]

[dependencies]
actix-rt = "1.1.1"
actix-service = "1.0.6"
actix-web = { version = "3.0.0", features = ["compress", "rustls"] }
actix-web-httpauth = "0.5.0"
anyhow = "1.0.34"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.11"
diesel = { version = "1.4.5", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.8.1"
futures = "0.3.5"
jsonwebtoken = "7.2.0"
log = "0.4.11"
r2d2 = "0.8.9"
rust-argon2 = "0.8.2"
serde = { version = "1.0.116", features = ["std", "derive"] }
serde_json = "1.0.57"
base64 = "0.13.0"
argonautica = "0.2.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
lazy_static = "1.4.0"
thiserror = "1.0.21"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
